<resources>
    <string name="app_name">ESBeta</string>

    <string name="menu_a">Video</string>
    <string name="menu_b">Book</string>
    <string name="menu_c">C</string>
    <string name="menu_d">D</string>

    <string name="menu_a_detail">React to short video clips</string>
    <string name="menu_b_detail">React to short stories</string>

    <string name="testing_book_btn_begin">Begin</string>
    <string name="testing_book_btn_end">End</string>

    <string name="toolbar_book_previous">Previous</string>
    <string name="toolbar_book_next">Next</string>
</resources>
